--- a/project/apps/canary/canary-svc.yml
+++ b/project/apps/canary/canary-svc.yml
@@ -6,7 +6,7 @@ spec:
   type: ClusterIP
   selector:
     app: canary
-    version: "1.0"
+    #version: "1.0"    #added as note , so it can support multiple versions.
   ports:
     - protocol: TCP
       port: 80
